# bot-alavancagem-bibyt

./: .env  .gitignore  README.md  Rodar.md  SKILL.md  codigo.md
python_brain/: analyze_trades.py  auditoria_trades.csv  dashboard.py  main_orchestrator.py
python_brain/telemetry_data/: telemetry_2026-03-18.jsonl  telemetry_2026-03-19.jsonl
rust_core/: .gitignore  Cargo.toml
rust_core/src/: ipc_health.rs  main.rs  quarantine.rs  score.rs  symbol_filter.rs
